Archive2/69/5540c3d23dd5d7/output
main.cpp: In constructor ‘Derived::Derived(std::vector<float>)’:
main.cpp:20:37: error: class ‘Derived’ does not have any field named ‘m_v’
     Derived(std::vector<float> v) : m_v(v)
                                     ^
